remove collapse code to prevent mobile issues

--- a/src/scripts/components/dropdown/dropdown.scss
+++ b/src/scripts/components/dropdown/dropdown.scss
@@ -59,20 +59,19 @@ $breakpoints: (xl, lg, md, sm, xs, xxs);
         @include p(sm);
         @include transition();
 
-        &.collapse {
-
-            @each $key,
-            $value in $breakpoints {
-                &-#{$key} {
-                    @include mq($key) {
-                        position: fixed;
-                        left: 0;
-                        right: 0;
-                        @include mx(lg);
-                    }
-                }
-            }
-        }
+        // &.collapse {
+        //     @each $key,
+        //     $value in $breakpoints {
+        //         &-#{$key} {
+        //             @include mq($key) {
+        //                 position: fixed;
+        //                 left: 0;
+        //                 right: 0;
+        //                 @include mx(lg);
+        //             }
+        //         }
+        //     }
+        // }
 
         .dropdown-item {
             >* {
